--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -21,7 +21,11 @@
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#contact">Contact Us</a></li>
       </ul>
+      <div class="mobile-menu">
+        <div class="hamburger"></div>
+      </div>
     </header>
+
     <section class="banner" id="banner">
       <div class="content">
         <h2>Always Choose Good</h2>
@@ -227,9 +231,6 @@
         </div>
         <a type="submit" class="btn">Send</a>
       </form>
-      <div class="image">
-        <img src="./images/bg3.jpg" alt="Tomatoes" />
-      </div>
     </section>
 
     <script src="./scripts/header.js"></script>
