--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/main.css" />
+
+    <link rel="shortcut icon" href="./images/logo.png" type="image/png">
   </head>
   <body>
     <header>
@@ -25,6 +27,15 @@
         <div class="hamburger"></div>
       </div>
     </header>
+
+    <ul class="mobile-links">
+      <li><a class="mobile-nav-link" href="#banner">Home</a></li>
+      <li><a class="mobile-nav-link" href="#about">About</a></li>
+      <li><a class="mobile-nav-link" href="#menu">Menu</a></li>
+      <li><a class="mobile-nav-link" href="#expert">Expert</a></li>
+      <li><a class="mobile-nav-link" href="#testimonials">Testimonials</a></li>
+      <li><a class="mobile-nav-link" href="#contact">Contact Us</a></li>
+    </ul>
 
     <section class="banner" id="banner">
       <div class="content">
@@ -234,5 +245,6 @@
     </section>
 
     <script src="./scripts/header.js"></script>
+    <script src="./scripts/mobile.js"></script>
   </body>
 </html>
