reveal on scroll added

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -49,7 +49,7 @@
         <a href="#menu" class="btn">Our Menu</a>
       </div>
     </section>
-    <section class="about" id="about">
+    <section class="about reveal" id="about">
       <div class="row">
         <div class="col50">
           <h2 class="titleText"><span>A</span>bout Us</h2>
@@ -73,7 +73,7 @@
         </div>
       </div>
     </section>
-    <section class="menu" id="menu">
+    <section class="menu reveal" id="menu">
       <div class="title">
         <h2 class="titleText">Our <span>M</span>enu</h2>
         <p>
@@ -124,7 +124,7 @@
         <a href="#" class="btn">View All</a>
       </div>
     </section>
-    <section class="expert" id="expert">
+    <section class="expert reveal" id="expert">
       <div class="title">
         <h2>Our Kitchen <span>E</span>xperts</h2>
         <p>
@@ -160,7 +160,7 @@
         </div>
       </div>
     </section>
-    <section class="testimonials" id="testimonials">
+    <section class="testimonials reveal" id="testimonials">
       <div class="title">
         <h2><span>T</span>estimonials</h2>
         <p>
@@ -214,7 +214,7 @@
         </div>
       </div>
     </section>
-    <section class="contact" id="contact">
+    <section class="contact reveal" id="contact">
       <form>
         <div class="title">
           <h2><span>C</span>ontact Us</h2>
@@ -256,5 +256,6 @@
     <script src="./scripts/header.js"></script>
     <script src="./scripts/mobile.js"></script>
     <script src="./scripts/contact-us.js"></script>
+    <script src="./scripts/scroll.js"></script>
   </body>
 </html>
